--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,3 +1,4 @@
+<!--
 <p> 
     <a href="{% url 'learning_logs:index' %}">Learning Log</a> -
     <a href="{% url 'learning_logs:topics' %}">Topics</a> -
@@ -10,4 +11,62 @@
     {% endif %}
 </p>
 
-{% block content %}{% endblock content %}
+{% block contents %}{% endblock contents %}
+-->
+
+{% load bootstrap4 %}
+
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
+        <title>Learning Log</title>
+
+        {% bootstrap_css %}
+        {% bootstrap_javascript jquery='full' %}
+    </head>
+
+    <body>
+        <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
+            <a class="navbar-brand" href="{% url 'learning_logs:index'%}">Learning Log</a>
+                
+            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarCollapse" aria-controls="navbarCollapse"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ml-auto">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <span class="navbar-text" style="text-transform:uppercase">HELLO, {{ user.username }}.</span>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:logout' %}">LOG OUT</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:register' %}">SIGN UP</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:login' %}">LOG IN</a></li>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+
+        <main role="main" class="container">
+            <div class="pb-2 mb-2 border-bottom">
+                {% block page_header %}{% endblock page_header %} 
+            </div>
+            {% block content %}{% endblock content %}
+        </main>
+        
+    </body>
+</html>
+
+
+
