--- a/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_logs/templates/learning_logs/edit_entry.html
@@ -1,15 +1,22 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap4 %}
+
+{% block page_header %}
+<h3>Edit Entry:</h3>
+{% endblock page_header %}
 
 {% block content %}
-<p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
-<p>Edit entry:</p>
 
-<form action="{% url 'learning_logs:edit_entry' entry.id %}" method='post'>
+<form action="{% url 'learning_logs:edit_entry' entry.id %}" method='post' class="form">
     <!--prevent attackers from using the form to gain unauthorized access to the server-->
     {% csrf_token %}
     <!--Display the form-->
-    {{ form.as_p }}
-    <button name="submit">Save Changes</button>
+    {% bootstrap_form form %}
+
+    {% buttons %}
+    <button name = "submit" class="btn btn-primary">SAVE CHANGES</button>
+    <a href="{% url 'learning_logs:topic' topic.id %}" class="btn btn-primary">CANCEL</a>
+    {% endbuttons %}
 </form>
 
 {% endblock content %}
