--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,6 +1,18 @@
 {% extends "learning_logs/base.html" %}
 
-{% block content%}
-<p>Learning Log helps you keep track of your learning, for any topic you're
-learning about.</p>
-{% endblock content %}
+{% block page_header %}
+
+<div class="jumbotron">
+    <h1 class="display-3">Track Your Learning</h1>
+    <p class="lead">Make your own Learning Log, and keep a list of the topics you're learning about. Whenever you learn something new
+        about a topic, make an entry summarizing what you've learned.</p>
+
+    {% if user.is_authenticated %}
+        <a class="btn btn-lg btn-primary" href="{% url 'learning_logs:topics' %}" role="button">BEGIN &raquo;</a>
+    {% else %}
+        <a class="btn btn-lg btn-primary" href="{% url 'users:register' %}" role="button">SIGN UP &raquo;</a>
+        <a class="btn btn-lg btn-primary" href="{% url 'users:login' %}" role="button">LOG IN &raquo;</a>
+    {% endif %}
+</div>
+
+{% endblock page_header %}
