--- a/learning_logs/templates/learning_logs/new_entry.html
+++ b/learning_logs/templates/learning_logs/new_entry.html
@@ -1,15 +1,22 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap4 %}
+
+{% block page_header %}
+<h3>Add a New Entry:</h3>
+{% endblock page_header %}
 
 {% block content %}
-<p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
-<p>Add a new entry:</p>
 
-<form action="{% url 'learning_logs:new_entry' topic.id %}" method='post'>
+<form action="{% url 'learning_logs:new_entry' topic.id %}" method='post' class="form">
     <!--prevent attackers from using the form to gain unauthorized access to the server-->
     {% csrf_token %}
     <!--Display the form-->
-    {{ form.as_p }}
-    <button name="submit">Add Entry</button>
+    {% bootstrap_form form %}
+
+    {% buttons %}
+    <button name="submit" class="btn btn-primary">ADD ENTRY</button>
+    <a href="{% url 'learning_logs:topic' topic.id %}" class="btn btn-primary">CANCEL</a>
+    {% endbuttons %}
 </form>
 
 {% endblock content %}
