--- a/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_logs/templates/learning_logs/new_topic.html
@@ -1,14 +1,22 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap4 %}
+
+{% block page_header %}
+<h3>Add a New Topic:</h3>
+{% endblock page_header %}
 
 {% block content %}
-<p>Add a new topic:</p>
 
-<form action = "{% url 'learning_logs:new_topic' %}" method = 'post'>
+<form action = "{% url 'learning_logs:new_topic' %}" method = 'post' class="form">
     <!--prevent attackers from using the form to gain unauthorized access to the server-->
     {% csrf_token %}
     <!--Display the form-->
-    {{ form.as_p }}
-    <button name="submit">Add Topic</button>
+    {% bootstrap_form form %}
+    
+    {% buttons %}
+    <button name = "submit" class="btn btn-primary">ADD TOPIC</button>
+    <a href="{% url 'learning_logs:topics' %}" class="btn btn-primary">CANCEL</a>
+    {% endbuttons %}
 </form>
 
 {% endblock content %}
