--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -1,28 +1,36 @@
 {% extends "learning_logs/base.html" %}
 
+{% block page_header %}
+<h3>
+    {{ topic }}
+    <small><a href="{% url 'learning_logs:topics' %}">Back To Topics</a><small>
+</h3>
+{% endblock page_header %}
+
 {% block content %}
 
-<p>Topic: {{ topic }}</p>
-<p>Entries:</p>
 <p>
-    <a href="{% url 'learning_logs:new_entry' topic.id %}">Add new entry</a>
+    <h4><a href="{% url 'learning_logs:new_entry' topic.id %}">Add New Entry</a></h4>
 </p>
  
 <ul>
 {% for entry in entries %}
-<li>
-    <p>{{ entry.date_added  }}</p>
-    <p>{{ entry.text }}</p>
-    
-    <p>
-        <a href="{% url 'learning_logs:edit_entry' entry.id %}">Edit entry</a>
-    </p>
-</li>
+
+<div class="card mb-3">
+    <h4 class="card-header">
+        {{ entry.date_added|date:'M d, Y H:i' }} 
+        <small><a href="{% url 'learning_logs:edit_entry' entry.id %}">edit entry</a></small>
+    </h4>
+
+    <div class="card-body">
+        <font size="+1">{{ entry.text|linebreaks }}</font>
+    </div>
+</div>
+
 {% empty %}
-<li>There is no entries for this topic yet.</li>
+<p><h4>There are no entries for this topic yet.</h4></p>
 {% endfor %}
 </ul>
-
 
 {% endblock content %}
 
