--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,21 +1,24 @@
 {% extends "learning_logs/base.html" %}
 
-{% block content %}
+{% block page_header %} 
+<h1>Topics</h1>
+{% endblock page_header %}
 
-<p>Topics</p>
+{% block content %}
 
 <!--unordered list-->
 <ul>
 {% for topic in topics %}
 <!--list item-->
-<li>
+<li><h3>
     <a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a>
-</li>
-{%empty%}
-<li>No topics have been added yet.</li>
+</h3></li>
+
+{% empty %}
+<li><h3>No topics have been added yet.</h3></li>
 {% endfor %}
 </ul>
 
-<a href="{% url 'learning_logs:new_topic' %}">Add a new topic</a>
+<h3><a href="{% url 'learning_logs:new_topic' %}">Add a New Topic</a></h3>
 {% endblock content %}
 
