--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -1,5 +1,10 @@
 {% extends "learning_logs/base.html" %}
 
-{% block content %}
-  <p>You have been logged out. Thank you for visiting!</p>
-{% endblock content %}
+{% block page_header %}
+
+<div class="jumbotron">
+    <hp class="lead">You have been logged out. Thank you for visiting!</h1>
+    
+</div>
+
+{% endblock page_header %}
