--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,17 +1,29 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap4 %}
+
+{% block page_header %}
+<h2>Log in to your account</h2>
+{% endblock page_header %}
 
 {% block content %}
 
+<!--   bootstrap4 will automatically handle errors
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
+-->
 
-<form method = 'post' action = "{% url 'users:login' %}">
+
+<form method="post" action="{% url 'users:login' %}" class="form">
     {% csrf_token %}
-    {{form.as_p}}
-    <button name = "submit">Log In</button>
+    {% bootstrap_form form %}
+
+    {% buttons %}
+    <button name="submit" class="btn btn-primary">LOG IN</button> 
+    {% endbuttons %}
+
     <input type="hidden" name = "next"
-    value = "{% url 'learning_logs:index' %}" />
+    value = "{% url 'learning_logs:topics' %}" />
 </form>
 
 {% endblock content %}
